# cpp-dev

./: README.md
cgi-bin/: MyProject.cgi  handler.cgi  http.cgi  keep_alive.cgi  main.cgi  store.txt  temp.txt  test.cgi  test_file.cgi  test_gen_html_form.cgi  test_http.cgi  test_redirect.cgi  test_save.cgi  test_set_cookies.cgi  tstdel.cgi
http/: TODO.txt
http/html/: get.html  post.html  upload.html
http/script/: handler.cpp  http.cpp  main.cgi  main.cpp
http/script/include/: store_test.cpp
http/script/include/helper/: cookies_parse  cookies_parse.cpp  generate_temp.cpp  helper.cpp  helper.hpp  rowURLDecode  rowURLDecode.cpp  testgen  x_www_form_urlencoded_decode  x_www_form_urlencoded_decode.cpp  x_www_form_urlencoded_encode  (+1 more)
http/script/include/redis/: CMakeLists.txt  main.cpp
http/script/include/redis/redis_client/: CMakeLists.txt  redis_client.cpp  redis_client.hpp
session/script/: session  session.cpp
tcp-server/: LOGIC.txt  Makefile  login.html  main  main.cpp  redirect.html  rootauthorized.html  server  signup.html  store.txt
tcp-server/html/: notfound.html  rootunauthorized.html  signin.html  signinerr.html  signuperr.html  unauthorized.html
tcp-server/script/helper/: helper.cpp  helper.hpp
tcp-server/script/http/: http.cpp  http.hpp
tcp-server/script/session/: redis.cpp  redis.hpp  session.cpp  session.hpp  session_test.cpp  test
tcp-server/script/store/: store.cpp  store.hpp  store_test.cpp  test
tcp-server/testtest/: TODO.txt
test/html/: index.html
test/script/: main.cpp  mylib.cpp  mylib.hpp  myprogram  test.cpp
(+14 files in other folders)
